--- a/importantdates.html
+++ b/importantdates.html
@@ -125,28 +125,31 @@
     <!--================Dates Area =================-->
     <div class="container" style="text-align: center; margin:50px auto;">
         <h2>Important Dates and Venue</h2>
-        <table class="table table-borderless table-hover text-center" style="text-align:center;margin: 0px auto;">
-            <tbody>
-                <tr>
-                    <td style="text-align: right;">Abstract submission last date:</td>
-                    <td style="text-align: left;">30th March 2020</td>
-                </tr>
-                <tr>
-                    <td style="text-align: right;">Registration fee submission:&nbsp;&nbsp;&nbsp;</td>
-                    <td style="text-align: left;">30th April 2020</td>
-                </tr>
-                <tr>
-                    <td style="text-align: right;">Conference dates:
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    </td>
-                    <td style="text-align: left;">5th and 6th June 2020</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <table class="table table-borderless table-responsive table-hover">
+                    <tbody>
+                        <tr>
+                            <td style="text-align: left;">Abstract submission last date</td>
+                            <td style="text-align: left;">30th March 2020</td right;">
+                        </tr>
+                        <tr>
+                            <td style="text-align: left;">Registration fee submission</td style="text-align: right;">
+                            <td style="text-align: left;">30th April 2020</td style="text-align: right;">
+                        </tr>
+                        <tr>
+                            <td style="text-align: left;">Conference dates</td style="text-align: right;">
+                            <td style="text-align: left;">5th, 6th June 2020</td style="text-align: right;">
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
         <!-- <b></b> <br/>
         <b></b> <br/>
         <b>Conference dates:</b> 5th and  6th  June 2020<br/> -->
-        <h3>Venue: QEEE HALL , VCE</h3><br />
+        <h3>Venue: QEEE HALL , VCE</h3><br/>
     </div>
 
     <!--================Dates Area =================-->
