--- a/importantdates.html
+++ b/importantdates.html
@@ -131,7 +131,7 @@
                     <tbody>
                         <tr>
                             <td style="text-align: left;">Abstract submission last date</td>
-                            <td style="text-align: left;">30th March 2020</td right;">
+                            <td style="text-align: left;">30th March 2020</td right;>
                         </tr>
                         <tr>
                             <td style="text-align: left;">Registration fee submission</td style="text-align: right;">
