--- a/Callforpapers.html
+++ b/Callforpapers.html
@@ -135,8 +135,8 @@
             Springer (Approved). Extended versions of selected best papers will expected to be appear
             in SCI/Scopus indexed international journals. At least one of the authors of each accepted paper
             must register for the conference. All submissions are to be done electronically through easychair link.</p>
-        <ul class="list-group">
-            <li class="list-group-item" style="text-align: center;">Conference Focus Areas</li>
+        <ul class="list-group" style=" display: inline-block;">
+            <li class="list-group-item" style="text-align: center;"><b style="color: black;">Conference Focus Areas</b></li>
             <li class="list-group-item" style="text-align: center;">Approximate Computing</li>
             <li class="list-group-item" style="text-align: center;">Computational Intelligence</li>
             <li class="list-group-item" style="text-align: center;">Cognitive Computing</li>
