--- a/accommodation.html
+++ b/accommodation.html
@@ -21,10 +21,10 @@
 	<link rel="stylesheet" href="css/snackbar.css">
 
 	<!-- Bootstrap carousel -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script> -->
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> -->
 	<style>
 		/* Make the image fully responsive */
 		.carousel-inner img {
@@ -152,7 +152,7 @@
 		</ul>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="img/Accomodation/Taramati-Baradari.png" alt="Taramati-Baradari" width="1100" height="500">
+				<img class="d-block w-100" src="img/Accomodation/Taramati-Baradari.png" alt="Taramati-Baradari" width="1100" height="auto">
 				<div class="carousel-caption">
 					<h3>
 						<a href="https://www.google.com/maps/place/Taramathi+Baradari/@17.3680578,78.3728344,15z/data=!4m11!1m2!2m1!1sHotels!3m7!1s0x3bcb942b94ed9187:0x1429cc92eaa6bf83!5m2!4m1!1i2!8m2!3d17.3787622!4d78.3793053"
@@ -212,12 +212,20 @@
 				</div>
 			</div>
 		</div>
-		<a class="carousel-control-prev" href="#demo" data-slide="prev">
+		<a class="carousel-control-prev" href="#demo" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		  </a>
+		  <a class="carousel-control-next" href="#demo" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		  </a>
+		<!-- <a class="carousel-control-prev" href="#demo" data-slide="prev">
 			<span class="carousel-control-prev-icon"></span>
 		</a>
 		<a class="carousel-control-next" href="#demo" data-slide="next">
 			<span class="carousel-control-next-icon"></span>
-		</a>
+		</a> -->
 	</div>
 
 	<!--================End Accommodation Area =================-->
