--- a/committees.html
+++ b/committees.html
@@ -107,14 +107,19 @@
     <!--================End Home Banner Area =================-->
 
     <!--================Team Area =================-->
+
     <div class="resp_margin_commt">
+        <h1>Patrons</h1>
+        <br />
         <table class="table table-striped">
             <tbody>
                 <tr>
+                    <th scope="row">1</th>
                     <td style="text-align: center;">Sri. P Balaji, CEO, VCE</td>
                     <td>Chief Patron</td>
                 </tr>
                 <tr>
+                    <th scope="row">2</th>
                     <td style="text-align: center;">Dr. S. V. Ramana, Principal, VCE</td>
                     <td>Patron</td>
                 </tr>
