--- a/details.html
+++ b/details.html
@@ -160,28 +160,32 @@
     <!--================End Event Time Area =================-->
 
     <!--================Welcome Area =================-->
-    <section class="welcome_area pad_btm">
-        <div class="container">
-            <div class="welcome_inner" style="text-align: center; margin:auto;">
-
-                <div class="col-lg-6 offset-lg-1" style="text-align: center; margin:auto;">
-                    <div class="welcome_text" style="text-align: center; margin:auto;">
-                        <h3>Welcome</h3>
-                        <p>The aim of this 4th International Conference on Smart Computing & Informatics (SCI-2020) is
-                            to present a unified platform for advanced and multi-disciplinary research towards design of
-                            smart computing and informatics. The theme is on a broader front focuses on various
-                            innovation paradigms in system knowledge, intelligence and sustainability that may be
-                            applied to provide realistic solutions to varied problems in society, environment and
-                            industries. The scope is also extended towards deployment of emerging computational and
-                            knowledge transfer approaches, optimizing solutions in varied disciplines of science,
-                            technology and healthcare.The conference proceeding aims publication of quality and
-                            unpublished work pertaining to specific topics of interest as mentioned in CFP.</p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+	<section class="welcome_area pad_btm">
+		<div class="container">
+			<div class="welcome_inner row">
+				<div class="col-lg-5">
+					<div class="welcome_img">
+						<img class="img-fluid" src="img/welcome-1.png" alt="">
+					</div>
+				</div>
+				<div class="col-lg-6 offset-lg-1">
+					<div class="welcome_text">
+						<h3>Welcome</h3>
+						<p>
+							The aim of this 4th International Conference on Smart Computing & Informatics (SCI-2020)
+							is to present a unified platform for advanced and multi-disciplinary research
+							towards design of smart computing and informatics. The theme is on a broader front focuses
+							on various innovation paradigms in system knowledge, intelligence and sustainability
+							that may be applied to provide realistic solutions to varied problems in society, environment
+							and industries. The scope is also extended towards deployment of emerging computational and knowledge
+							transfer approaches, optimizing solutions in varied disciplines of science, technology and healthcare.
+							The conference proceeding aims publication of quality and unpublished work pertaining to specific topics of interest as mentioned in CFP.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
     <!--================End Welcome Area =================-->
 
     <!--================Start Event Map Area =================-->
