--- a/Callforpapers.html
+++ b/Callforpapers.html
@@ -135,32 +135,41 @@
             Springer (Approved). Extended versions of selected best papers will expected to be appear
             in SCI/Scopus indexed international journals. At least one of the authors of each accepted paper
             must register for the conference. All submissions are to be done electronically through easychair link.</p>
-        <ul class="list-group" style=" display: inline-block;">
+            
+        <ul class="list-group list-group-horizontal" style=" display: inline-block;">
             <li class="list-group-item" style="text-align: center;"><b style="color: black;">Conference Focus Areas</b></li>
-            <li class="list-group-item" style="text-align: center;">Approximate Computing</li>
-            <li class="list-group-item" style="text-align: center;">Computational Intelligence</li>
-            <li class="list-group-item" style="text-align: center;">Cognitive Computing</li>
-            <li class="list-group-item" style="text-align: center;">Intelligent Control Agents</li>
-            <li class="list-group-item" style="text-align: center;">Optimization Techniques</li>
-            <li class="list-group-item" style="text-align: center;">Intelligent Agents</li>
-            <li class="list-group-item" style="text-align: center;">Soft Computing Techniques</li>
-            <li class="list-group-item" style="text-align: center;">Parallel & Scalable Computing</li>
-            <li class="list-group-item" style="text-align: center;">Internet of Things</li>
-            <li class="list-group-item" style="text-align: center;">Cloud & Fog Computing</li>
-            <li class="list-group-item" style="text-align: center;">Mobile Computing & Ad hoc Networks</li>
-            <li class="list-group-item" style="text-align: center;">Security Tools & Technologies</li>
-            <li class="list-group-item" style="text-align: center;">Stream Mining</li>
-            <li class="list-group-item" style="text-align: center;">Social Media</li>
-            <li class="list-group-item" style="text-align: center;">Knowledge - based Systems and Formal Methods</li>
-            <li class="list-group-item" style="text-align: center;">Search Engines and Information Retrieval</li>
-            <li class="list-group-item" style="text-align: center;">Real- time Systems</li>
-            <li class="list-group-item" style="text-align: center;">Real- time Analytics</li>
-            <li class="list-group-item" style="text-align: center;">Autonomous Agents</li>
-            <li class="list-group-item" style="text-align: center;">Security and Information Assurance</li>
-            <li class="list-group-item" style="text-align: center;">Robotics</li>
-            <li class="list-group-item" style="text-align: center;">Robust Control Agents</li>
-            <li class="list-group-item" style="text-align: center;">Big data Tools & Technologies</li>
-            <li class="list-group-item" style="text-align: center;">Recent Trends & Developments in Networking</li>
+            <div class="row">
+                <div class="col-sm">
+                    <li class="list-group-item" style="text-align: center;">Approximate Computing</li>
+                    <li class="list-group-item" style="text-align: center;">Computational Intelligence</li>
+                    <li class="list-group-item" style="text-align: center;">Cognitive Computing</li>
+                    <li class="list-group-item" style="text-align: center;">Intelligent Control Agents</li>
+                    <li class="list-group-item" style="text-align: center;">Optimization Techniques</li>
+                    <li class="list-group-item" style="text-align: center;">Intelligent Agents</li>
+                    <li class="list-group-item" style="text-align: center;">Soft Computing Techniques</li>
+                    <li class="list-group-item" style="text-align: center;">Parallel & Scalable Computing</li>
+                </div>
+                <div class="col-sm">
+                    <li class="list-group-item" style="text-align: center;">Internet of Things</li>
+                    <li class="list-group-item" style="text-align: center;">Cloud & Fog Computing</li>
+                    <li class="list-group-item" style="text-align: center;">Mobile Computing & Ad hoc Networks</li>
+                    <li class="list-group-item" style="text-align: center;">Security Tools & Technologies</li>
+                    <li class="list-group-item" style="text-align: center;">Stream Mining</li>
+                    <li class="list-group-item" style="text-align: center;">Social Media</li>
+                    <li class="list-group-item" style="text-align: center;">Knowledge - based Systems and Formal Methods</li>
+                    <li class="list-group-item" style="text-align: center;">Search Engines and Information Retrieval</li>
+                </div>
+                <div class="col-sm">
+                    <li class="list-group-item" style="text-align: center;">Real- time Systems</li>
+                    <li class="list-group-item" style="text-align: center;">Real- time Analytics</li>
+                    <li class="list-group-item" style="text-align: center;">Autonomous Agents</li>
+                    <li class="list-group-item" style="text-align: center;">Security and Information Assurance</li>
+                    <li class="list-group-item" style="text-align: center;">Robotics</li>
+                    <li class="list-group-item" style="text-align: center;">Robust Control Agents</li>
+                    <li class="list-group-item" style="text-align: center;">Big data Tools & Technologies</li>
+                    <li class="list-group-item" style="text-align: center;">Recent Trends & Developments in Networking</li>
+                </div>
+            </div>
         </ul>
     </div>
     <!--================Contact Area =================-->
