added organizing, publishing chairs, national and international review boards, call for papers and speakers in the nav bar

--- a/committees.html
+++ b/committees.html
@@ -40,48 +40,51 @@
                     </button>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                        <ul class="nav navbar-nav menu_nav">
-                            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                            <!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
-                            <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="false">About</a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
-                                </ul>
-                            </li>
-                            <!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
-                            <li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
-                                    Venue</a></li>
-                            <li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
-                            <li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
-                            <li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
+						<ul class="nav navbar-nav menu_nav">
+							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
+							<li class="nav-item submenu dropdown">
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+									aria-haspopup="true" aria-expanded="false">About</a>
+								<ul class="dropdown-menu">
+									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
+									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
+								</ul>
+							</li>
+							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a></li>
+							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
+									Venue</a></li>
+							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
+							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
+							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
 
-                            <!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
-                            <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="false">Register</a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
+							<!--<li class="nav-item submenu dropdown">
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+									aria-haspopup="true" aria-expanded="false">Register</a>
+								<ul class="dropdown-menu">
+									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
+									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+								</ul>
+                            </li>-->
+                            <li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
+							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
+							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 
-                            <!-- <li class="nav-item submenu dropdown">
+							<!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
 								</ul>
 							</li> -->
-                        </ul>
-                        <!-- <ul class="nav navbar-nav navbar-right">
+						</ul>
+						<!-- <ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
 						</ul> -->
-                    </div>
+					</div>
                 </div>
             </nav>
         </div>
@@ -416,6 +419,59 @@
                 </tr>
             </tbody>
         </table>
+
+        <h1>General Chair</h1>
+        <br />
+        <table class="table table-striped">
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Dr. Suresh Chandra Satapathy</td>
+                    <td style="padding-right:102px;">KIIT DU, Bhubaneswar</td>
+                </tr>
+            </tbody>
+        </table>
+        <br />
+
+
+        <h1>Publication Chair</h1>
+        <br />
+        <table class="table table-striped">
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Dr. Vikrant Bhateja</td>
+                    <td style="padding-right:102px;">Lucknow    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <br />
+        <h1>Review Board</h1>
+        <br />
+        <table class="table table-striped">
+            <h2 style="text-align: center;">National Review Board</h2>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+            <br />
+        </table>
+        <br />
+        <table class="table table-striped">
+            <h2 style="text-align: center;"> International Review Board</h2>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+
     </div>
     <!--================End Team Area =================-->
 
