--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 								</ul>
 							</li>
 							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a></li>
 							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
 									Venue</a></li>
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
@@ -76,14 +77,16 @@
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
 
 							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
-							<li class="nav-item submenu dropdown">
+							<!--<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">Register</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
 									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
 								</ul>
-							</li>
+							</li>-->
+							<li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
+							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
 							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 
@@ -136,7 +139,7 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="event_text">
-							<h3>Abstract Submission deadline</h3>
+							<h3>Paper Submission deadline</h3>
 							<p>Send your registration within </p>
 						</div>
 					</div>
@@ -199,7 +202,7 @@
 	<!--================End Welcome Area =================-->
 
 	<!--================Team Area =================-->
-	<section class="team_area p_120">
+	<section class="team_area p_120" id="keyNoteSpeakers">
 		<div class="container">
 			<div class="main_title">
 				<h2>Meet Head Speakers</h2>
