--- a/details.html
+++ b/details.html
@@ -56,47 +56,51 @@
                     </button>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                        <ul class="nav navbar-nav menu_nav">
-                            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-                            <!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
-                            <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="false">About</a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
-                                </ul>
-                            </li>
-                            <!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
-                            <li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
-                                    Venue</a></li>
-                            <li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
-                            <li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
-                            <li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
+						<ul class="nav navbar-nav menu_nav">
+							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
+							<li class="nav-item submenu dropdown">
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+									aria-haspopup="true" aria-expanded="false">About</a>
+								<ul class="dropdown-menu">
+									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a></li>
+									<li class="nav-item"><a class="nav-link" href="details.html">Event</a></li>
+								</ul>
+							</li>
+							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a></li>
+							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
+									Venue</a></li>
+							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
+							<li class="nav-item"><a class="nav-link" href="accommodation.html">Accommodation</a></li>
+							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
 
-                            <!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
-                            <li class="nav-item submenu dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="false">Register</a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
+							<!--<li class="nav-item submenu dropdown">
+								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
+									aria-haspopup="true" aria-expanded="false">Register</a>
+								<ul class="dropdown-menu">
+									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
+									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+								</ul>
+                            </li>-->
+                            <li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
+							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
+							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
-                            <!-- <li class="nav-item submenu dropdown">
+
+							<!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="about-us.html">College</a>
 									<li class="nav-item"><a class="nav-link" href="details.html">Event</a>
 								</ul>
 							</li> -->
-                        </ul>
-                        <!-- <ul class="nav navbar-nav navbar-right">
+						</ul>
+						<!-- <ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="./register.html" class="tickets_btn">Register</a></li>
 						</ul> -->
-                    </div>
+					</div>
                 </div>
             </nav>
         </div>
@@ -127,7 +131,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="event_text">
-                            <h3>ABSTRACT SUBMISSION DEADLINE</h3>
+                            <h3>PAPER SUBMISSION DEADLINE</h3>
                             <p>Send your Registration within</p>
                         </div>
                     </div>
