--- a/speakers.html
+++ b/speakers.html
@@ -41,7 +41,7 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav">
-							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> -->
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
@@ -52,6 +52,7 @@
 								</ul>
 							</li>
 							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
+							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a></li>
 							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
 									Venue</a></li>
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
@@ -59,14 +60,16 @@
 							<li class="nav-item"><a class="nav-link" href="./schedule.html">Schedule</a></li>
 
 							<!-- <li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li> -->
-							<li class="nav-item submenu dropdown">
+							<!--<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">Register</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="Callforpapers.html">Papers</a></li>
 									<li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
 								</ul>
-							</li>
+							</li>-->
+							<li class="nav-item"><a class="nav-link" href="./speakers.html">Speakers</a></li>
+							<li class="nav-item"><a class="nav-link" href="./register.html">Register</a></li>
 							<li class="nav-item"><a class="nav-link" href="./contact.html">Contact Us</a></li>
 
 
