updated designations in publication chair

--- a/committees.html
+++ b/committees.html
@@ -441,7 +441,7 @@
                 <tr>
                     <th scope="row">1</th>
                     <td>Dr. Vikrant Bhateja</td>
-                    <td style="padding-right:102px;">Lucknow    </td>
+                    <td style="text-align:center;">Professor, ECED, Head of Academics and Quailty Control, SRMGPC, Lucknow</td>
                 </tr>
             </tbody>
         </table>
